experimental/ir/testdata/tags/reserved.proto.stderr.txt
error: use of reserved field number `2`
  --> testdata/tags/reserved.proto:21:25
   |
21 |     optional int32 y1 = 2;
   |                         ^ used here
22 |     optional int32 y2 = 3;
...
26 |     reserved 2, 3 to 3, 5 to 10;
   |              - field number reserved here

error: use of reserved field number `3`
  --> testdata/tags/reserved.proto:22:25
   |
22 |     optional int32 y2 = 3;
   |                         ^ used here
23 |     optional int32 y3 = 4;
...
26 |     reserved 2, 3 to 3, 5 to 10;
   |                 ------ field number reserved here

error: use of reserved field number `5`
  --> testdata/tags/reserved.proto:24:25
   |
24 |     optional int32 y4 = 5;
   |                         ^ used here
25 |
26 |     reserved 2, 3 to 3, 5 to 10;
   |                         ------- field number reserved here

warning: singleton range can be simplified
  --> testdata/tags/reserved.proto:26:17
   |
26 |     reserved 2, 3 to 3, 5 to 10;
   |                 ^^^^^^
  help: replace with a single number
   |
26 | -     reserved 2, 3 to 3, 5 to 10;
26 | +     reserved 2, 3, 5 to 10;

error: overlapping field number ranges
  --> testdata/tags/reserved.proto:27:14
   |
26 |     reserved 2, 3 to 3, 5 to 10;
   |                         ------- overlaps with this one
27 |     reserved 7, 8 to max;   // Overlapping reserved regions.
   |              ^ this range
   |
   = help: they overlap at `7`

error: overlapping field number ranges
  --> testdata/tags/reserved.proto:27:17
   |
26 |     reserved 2, 3 to 3, 5 to 10;
   |                         ------- overlaps with this one
27 |     reserved 7, 8 to max;   // Overlapping reserved regions.
   |                 ^^^^^^^^ this range
   |
   = help: they overlap in the range `8 to 10`

error: `max` outside of range end
  --> testdata/tags/reserved.proto:28:14
   |
28 |     reserved max to max;    // Only first can be max.
   |              ^^^
   = note: the special `max` expression can only be used at the end of a range

error: use of reserved enum value `2`
  --> testdata/tags/reserved.proto:33:10
   |
33 |     Y1 = 2;
   |          ^ used here
34 |     Y2 = 3;
...
38 |     reserved 2, 3 to 3, 5 to 10;
   |              - enum value reserved here

error: use of reserved enum value `3`
  --> testdata/tags/reserved.proto:34:10
   |
34 |     Y2 = 3;
   |          ^ used here
35 |     Y3 = 4;
...
38 |     reserved 2, 3 to 3, 5 to 10;
   |                 ------ enum value reserved here

error: use of reserved enum value `5`
  --> testdata/tags/reserved.proto:36:10
   |
36 |     Y4 = 5;
   |          ^ used here
37 |
38 |     reserved 2, 3 to 3, 5 to 10;
   |                         ------- enum value reserved here

warning: singleton range can be simplified
  --> testdata/tags/reserved.proto:38:17
   |
38 |     reserved 2, 3 to 3, 5 to 10;
   |                 ^^^^^^
  help: replace with a single number
   |
38 | -     reserved 2, 3 to 3, 5 to 10;
38 | +     reserved 2, 3, 5 to 10;

error: overlapping enum value ranges
  --> testdata/tags/reserved.proto:39:14
   |
38 |     reserved 2, 3 to 3, 5 to 10;
   |                         ------- overlaps with this one
39 |     reserved 7, 8 to max;
   |              ^ this range
   |
   = help: they overlap at `7`

error: overlapping enum value ranges
  --> testdata/tags/reserved.proto:39:17
   |
38 |     reserved 2, 3 to 3, 5 to 10;
   |                         ------- overlaps with this one
39 |     reserved 7, 8 to max;
   |                 ^^^^^^^^ this range
   |
   = help: they overlap in the range `8 to 10`

error: `max` outside of range end
  --> testdata/tags/reserved.proto:40:14
   |
40 |     reserved max to max;
   |              ^^^
   = note: the special `max` expression can only be used at the end of a range

error: use of reserved enum value `0`
  --> testdata/tags/reserved.proto:44:9
   |
44 |     K = 0;
   |         ^ used here
45 |     reserved 0;
   |              - enum value reserved here

encountered 13 errors and 2 warnings
